Revision history for Bread-Board

{{$NEXT}}
  [ API CHANGES ]

  [ BUG FIXES ]

  [ DOCUMENTATION ]

  [ ENHANCEMENTS ]

  [ NEW FEATURES ]

  [ STATISTICS ]

0.34 2016-03-28
  - Add test messages to tests which did not have them, (#50, Alex
    Balhatchet)

  [ DOCUMENTATION ]
    - add missing module abstracts. (GH#49, Alex Balhatchet, GH#16,
      Sterling Hanenkamp)

  [ ENHANCEMENTS ]
    - SetterInjection can now accept any constructor. (#43, dakkar)

  [ STATISTICS ]
    - code churn: 37 files changed, 462 insertions(+), 395 deletions(-)

0.33 2015-04-26
  - add 'literal' keyword (Yanick Champoux, #31)
  - added documentation for most of the classes (dakkar, sponsored by
    Net-a-Porter.com)

  [ STATISTICS ]
    - code churn: 35 files changed, 1016 insertions(+), 375 deletions(-)

0.32 2014-06-03
  - fixes to arrayref dependencies (dakkar, #35)

0.31 2014-05-08
  - allow specifying dependency values as arrayrefs, which will resolve to
    an arrayref containing the resolved service values (dakkar, #34)

0.30 2014-02-02
  - fix deprecated use of Class::MOP::load_class (Caleb Cushing, #33)

0.29 2013-11-21
  - Fix deprecated enum syntax

0.28 2013-08-30
  - Allow overriding of services and containers. This is useful when using
    the common pattern of "sub BUILD { my $self = shift; container $self =>
    as { ... } }" since the BUILD method in a subclass can modify existing
    services and containers that were defined in a superclass, rather than
    only being able to replace them (Florian Ragwitz, #26, #27).

0.27 2013-08-06
  - allow the 'container $obj' sugar for parameterized containers (Florian
    Ragwitz, #25)

0.26 2013-08-01
  - allow cloning containers with parameterized subcontainers (Florian
    Ragwitz, #22)
  - allow referencing parent services from parameterized subcontainers
    (Florian Ragwitz, #23)
  - deprecate special case in path traversal where a path component with
    the name of the current container was ignored (doy, #20)